Fix padding on tablet view

--- a/src/App.scss
+++ b/src/App.scss
@@ -578,7 +578,9 @@ hr{
     
   }
   .sides{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     
   }
@@ -595,13 +597,17 @@ hr{
     margin-bottom: 40px;
   }
   #welcome-text{
+    text-align: center;
+    margin: auto;
     margin-left: 0;
-    width: 70%;
+    width: 80%;
+    
     
   }
   #infobar{
     display: block;
     width: 75%;
+    margin: 100px auto;
     padding: 20px 0 20px 0;
   }
   #info{
@@ -691,11 +697,26 @@ hr{
     margin-top: 0;
     margin-bottom: 60px;
   }
+  #divider-text{
+    text-align: center;
+    display: block;
+    
+    
+  }
   .text{
    
      
      margin-left: 0;
      
+   }
+   .question{
+    font-size: 32px;
+    margin-left: 0;
+    padding: 0 20px;
+   }
+   .answer{
+    margin: auto;
+    font-size: 12px;
    }
   
  
